# tongji-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  playwright_scan.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: config.py  logging.py  responses.py  security.py
app/raw_one/: __init__.py  client.py  login.py  session_store.py
app/raw_one/services/: __init__.py  calendar.py  courses.py  notices.py  session.py  students.py
app/tools/: __init__.py  dependencies.py  routes_admin.py  routes_calendar.py  routes_courses.py  routes_notices.py  routes_session.py  routes_students.py
docs/: 1-tongji-api-catalog.md  SKILL.md  agent-tools.md  api-reference.md  api-status.md  api.md  development.md  how-to-add-api.md  phase-1-raw-one-api-tool-service-plan.md
scripts/: generate_docs.py
tests/: conftest.py  test_agent_tools.py  test_courses.py  test_login.py  test_raw_one_client.py  test_registry.py  test_routes.py  test_session_store.py
tongji/: __init__.py  __main__.py  admin_routes.py  cli.py  routes.py  sdk.py  server.py
tongji/core/: client.py  config.py  dict.py  errors.py  imap.py  logging.py  login.py  session_store.py
tongji/core/services/: calendar.py  classroom.py  courses.py  culture.py  elections.py  evaluation.py  exams.py  grades.py  help_center.py  major.py  notices.py  picture.py  session.py  students.py  (+3 more)
tongji/modules/: __init__.py  base.py  catalog.py  registry.py
tongji/tools/: __init__.py  models.py  routes.py  service.py
